@@ -1,0 +1,10 @@
+/**
+ * Galyleo Jupyter client {@link Connect} classes.
+ *
+ * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
+ * @version $Revision$
+ */
+@Manifest.Section
+package galyleo.connect;
+
+import ball.annotation.Manifest;
